[package]
name = "ping-rust"
version = "0.1.5"
edition = "2021"
description = "Menu-driven installer and manager for the shoes proxy server"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/ping-rust"
repository = "https://github.com/Jyanbai/ping-rust"
exclude = ["task_plan.md", "findings.md", "progress.md", "SOURCE_SNAPSHOT.md", "COMPLETION_AUDIT.md", "sing-box-main"]
keywords = ["proxy", "shoes", "reality", "vless", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ping-rust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
dialoguer = "0.11"
flate2 = "1.1"
fs2 = "0.4"
futures-util = "0.3"
hex = "0.4"
indicatif = "0.18"
rand = "0.9"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.20"
tokio = { version = "1.47", features = ["macros", "process", "rt-multi-thread"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
url = "2.5"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
